kubernetes-networks/canary/http-svc-ingress-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary-header"
    nginx.ingress.kubernetes.io/canary-by-header-value: "canary"
    # nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
    - host: echo.com
      http:
        paths:
          - backend:
              serviceName: http-svc
              servicePort: 80
            path: /canary
