kubernetes-networks/canary/http-svc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: echo.com
      http:
        paths:
          - backend:
              serviceName: http-svc
              servicePort: 80
